# castellyn

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  PSScriptAnalyzerSettings.psd1  README.md  build_all.bat  build_all.ps1  package-lock.json  package.json  run_dev.bat  rust-toolchain.toml  tailwind.config.js  verify.ps1
.githooks/: pre-push
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: AGENTS.md  ARCHITECTURE.md  BUILD.md  CANON.md  I18N.md
docs/adr/: 0001-binding-via-settings-json-dummy-token.md
manifest/: maintenance-manifest.json
plans/: AGENTS.md  IMPROVE-20-2026-07-05.md  SMOKE-CHECKLIST-2026-07-05.md  SMOKE-DIAGNOSIS-2026-07-05.md  STACK-OWNERSHIP-PLAN.md  STACK-OWNERSHIP-PROMPT.md  matrix-mockup.html  orchestrator-loop-prompt.md  stack-registry.json
plans/dev-improve-0703/2026-07-03/: brief-w1-frontend.md  brief-w1-rust.md  brief-w2a-sessions.md  brief-w2b-page.md  brief-w3a-status.md  brief-w3b-restore.md  contracts-wave1.json  gaps-diagnosis-and-fixes.md  progress.json  review-fe.json  review-rust.json  review-w5.json  rubric-wave1.md  smoke-run1-findings.md  sync-A-profiles.md  sync-B-fanout.md  sync-C-sessions.md  sync-map.html
plans/dev-run2-phaseA/: progress.json  review-21c.json  review-21e.json  review-5.json  review-gap2.json
plans/diagnosis-2026-07-05/: REPORT.md  diag-analytics-sessions.md  diag-forks.md  diag-profiles.md  diag-schedule.md  diag-sync.md
plans/herdr-port/: PLAN.md  WAVE4-layout-spec.md  WAVE4-smoke-feedback.md  launcher-final-mockups.html  launcher-mockups.html  launcher-mockups.md
plans/i18n/: 2026-06-13-i18n-language-switching-design.md
plans/improve/: RUN2-prompt.md  fix_plan-2026-07-03.json  master-plan-run2-redesign.md  plain_summary-2026-07-03.md  report-2026-07-03.md
plans/improve/backlog-2026-07-03/: README.md  wave-1-hardening.md  wave-2-quick-wins.md  wave-3-reliability.md  wave-4-ux.md  wave-5-limits.md
plans/omniroute-stack/: DESIGN.md  PLAN-01-monitoring-trust.md  PLAN-02-supervisor-hardening.md  PLAN-03-omniroute-integration.md  PLAN-03b-omniroute-f6f7.md
plans/tech-debt-full/2026-07-05/: advocate-validation.md  briefing.md  findings-for-validation.md  performance-findings.md  quality-findings.md  reliability-findings.md  report.md  security-2-findings.md  security-findings.md  solution-research.md  subagents-feature-research.md  supply-chain-findings.md  verified-findings.md
scripts/: check-i18n-parity.ts
src/: AGENTS.md  app.css  app.html
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/assets/: castellyn_notify.ps1  castellyn_opencode_plugin.js  castellyn_status.py  plugin_sync.py
src-tauri/capabilities/: default.json  panes.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_schedules.rs  agent_status.rs  i18n.rs  lib.rs  limits.rs  main.rs  schedules_watch.rs  session_bus.rs  stack_health.rs  worktree.rs
src/lib/: AGENTS.md  agentStatus.svelte.ts  attention.test.ts  attention.ts  bytes.ts  clipboard.ts  componentLabel.ts  confirmGate.adoption.test.ts  confirmGate.test.ts  confirmGate.ts  contrast.test.ts  download.ts  envelope.ts  floating.ts  glossary.ts  guardedSend.test.ts  guardedSend.ts  hookHealth.test.ts  hookHealth.ts  ipc.test.ts  ipc.ts  launchAdvisor.test.ts  launchAdvisor.ts  launchArgs.test.ts  launchArgs.ts  limitSwitch.test.ts  limitSwitch.ts  limits.svelte.ts  logKind.test.ts  logKind.ts  matrixState.svelte.ts  menuContinue.test.ts  menuContinue.ts  monitors.ts  nav.svelte.ts  navHistory.svelte.ts  navOrder.svelte.ts  opencodePlugin.test.ts  outcome.test.ts  outcome.ts  (+24 more)
src/lib/components/: AGENTS.md  AnalyticsTab.svelte  BackupTab.svelte  CommandPalette.svelte  ComponentCard.svelte  ConfirmDialog.svelte  Console.svelte  DataTable.svelte  DetachedView.svelte  DropdownMenu.svelte  EnvironmentsTab.svelte  FolderField.svelte  ForkRepoCard.svelte  ForksTab.svelte  HomeTab.svelte  HotkeyHelp.svelte  LaunchConfigDialog.svelte  MatrixControls.svelte  MatrixRowEditor.svelte  McpTab.svelte  ModalShell.svelte  MyProviderEditDialog.svelte  NoScriptsBanner.svelte  NotificationPanel.svelte  OnboardingView.svelte  OnboardingWizard.svelte  PluginsTab.svelte  ProfileEditDialog.svelte  ProfileUsageBadge.svelte  ProfilesMatrix.svelte  ProfilesTab.svelte  ProviderEditDialog.svelte  ProvidersTab.svelte  RestoreDialog.svelte  RouterConnectDialog.svelte  ScheduleTab.svelte  Segmented.svelte  Select.svelte  SessionLaunchDialog.svelte  SessionsTab.svelte  (+13 more)
src/lib/i18n/: AGENTS.md  index.svelte.ts  index.test.ts  index.ts  types.ts
src/lib/i18n/locales/en/: agents.ts  analytics.ts  backup.ts  common.ts  components.ts  console.ts  environments.ts  forks.ts  glossary.ts  health.ts  index.ts  mcp.ts  myProviders.ts  nav.ts  onboarding.ts  page.ts  plugins.ts  profiles.ts  providers.ts  schedule.ts  sessions.ts  settings.ts  sync.ts  titlebar.ts  updates.ts
src/lib/i18n/locales/ru/: agents.ts  analytics.ts  backup.ts  common.ts  components.ts  console.ts  environments.ts  forks.ts  glossary.ts  health.ts  index.ts  mcp.ts  myProviders.ts  nav.ts  onboarding.ts  page.ts  plugins.ts  profiles.ts  providers.ts  schedule.ts  sessions.ts  settings.ts  sync.ts  titlebar.ts  updates.ts
src/lib/i18n/locales/zh/: agents.ts  analytics.ts  backup.ts  common.ts  components.ts  console.ts  environments.ts  forks.ts  glossary.ts  health.ts  index.ts  mcp.ts  myProviders.ts  nav.ts  onboarding.ts  page.ts  plugins.ts  profiles.ts  providers.ts  schedule.ts  sessions.ts  settings.ts  sync.ts  (+2 more)
src/lib/shot/: fixtures.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tools/: AGENTS.md  ScriptKit.ps1  Sync-ScriptKit.ps1  iso-test.ps1  iso-world.ps1  make-icon.py  shoot-all.py  shoot.py
tools/analytics/: query.cjs  unified-key.cjs
tools/claude-profiles/legacy/: Check-Provider.ps1  Connect-CustomProvider.ps1  Connect-Router.ps1  Manage-Engine.ps1  Manage-OpenCode-Provider.ps1  Manage-Provider.ps1  Setup-Router.ps1
tools/fork-updater/: ForkSync.psm1  update-forks.ps1
tools/stack/: Stack-Procs.ps1
