[package]
name = "agenthub"
version = "0.2.1"
description = "AgentHub — control center for AI coding agents"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agenthub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
# Native folder/file pickers (Windows Explorer dialog) for working-folder inputs.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time"] }
# Secrets (provider API keys + freellmapi dashboard token) live in the Windows Credential
# Manager, never in plaintext JSON. windows-native backend = no extra runtime deps.
keyring = { version = "3", features = ["windows-native"] }
# Real PTYs for the parallel-sessions tab: run each profile's `claude` in a true terminal so
# its TUI renders (xterm.js on the frontend). base64 frames PTY bytes for the data events.
portable-pty = "0.8"
base64 = "0.22"

