[package]
name = "castellyn"
version = "0.6.1"
description = "Castellyn — control center for your AI coding dev environment"
authors = ["danscMax"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "castellyn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
# Native folder/file pickers (Windows Explorer dialog) for working-folder inputs.
tauri-plugin-dialog = "2"
# Native clipboard — the web clipboard (navigator.clipboard + execCommand) is silently
# non-functional in the WebView2 shell, so copy buttons need the OS clipboard via this plugin.
tauri-plugin-clipboard-manager = "2"
# OS-level hotkey to show/hide the window from anywhere (registered from Rust only).
tauri-plugin-global-shortcut = "2"
# Native HTTP probes for provider liveness / model lists (replaces the PowerShell Invoke-RestMethod
# scripts). Blocking client (rustls by default), called from spawn_blocking. Minimal deps.
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time"] }
# Secrets (provider API keys + freellmapi dashboard token) live in the Windows Credential
# Manager, never in plaintext JSON. windows-native backend = no extra runtime deps.
keyring = { version = "3", features = ["windows-native"] }
# Real PTYs for the parallel-sessions tab: run each profile's `claude` in a true terminal so
# its TUI renders (xterm.js on the frontend). Output streams as raw bytes over a Tauri channel.
# PINNED to 0.8: 0.9.0 hardcodes PSEUDOCONSOLE_INHERIT_CURSOR, so conhost blocks waiting for a
# DSR cursor-position reply at startup — hangs headless PTYs (pty_echo_roundtrip) and races the
# xterm.js attach in Sessions. Re-evaluate when the flag becomes opt-out upstream.
portable-pty = "0.8"
tauri-plugin-process = "2"
# OS toasts for agent-status transitions in Sessions (fired from Rust — needs no JS capability).
tauri-plugin-notification = "2"
toml_edit = "0.25.12"

# Win32 Job Object so PTY child trees (pwsh → claude/node, ssh.exe) die with the app instead of
# orphaning on a kill/crash. Windows-only; no-op stub elsewhere.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  # MessageBeep for agent-status sounds (system sounds — no bundled audio assets).
  # The function lives in System::Diagnostics::Debug; its MESSAGEBOX_STYLE arg needs UI feature.
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
# Single-instance guard (desktop-only): a second launch focuses the running window instead of
# opening a duplicate. Must be registered as the first plugin in run().
tauri-plugin-single-instance = "2"

# Release profile: strip symbols + thin LTO + one codegen unit. Measured: exe 16.0->14.2 MB (~10%
# — Rust release carries no debuginfo for strip to remove, so the real win is LTO/codegen, not size).
# NOT panic="abort": native ops rely on unwinding a panicked spawn_blocking closure into a JoinError
# (the .unwrap_or fallbacks) — abort would crash the whole app instead.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1

